--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,8 @@
     --title-color-white: #ffffff;
     --accent-color: #2196F3;
     --address-color: (255, 255, 255, 0,6);
+    --icons-color: #AFB1B8;
+
 }
 
 
@@ -19,6 +21,7 @@
     #F5F4FA
 */
 body {
+    margin: 0;
     background-color: #ffffff;
     color: var(--primary-text-color);
 
@@ -41,6 +44,10 @@ a {
 
 h1, h2, h3, p, a {
     margin: 0;
+}
+
+span {
+    padding: 0;
 }
 
 button {
@@ -67,6 +74,12 @@ button {
   overflow: hidden;
 }
 
+.section {
+    max-width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
 .container {
     margin-left: auto;
     margin-right: auto;
@@ -85,6 +98,9 @@ button {
 }
 
 /* Навигация сайта*/
+.header {
+    border-bottom: 1px solid #ECECEC;
+}
 
 .nav {
     display: flex;
@@ -93,12 +109,13 @@ button {
 
 .logo {
     display: block;
+    padding: 0;
 
     color: var(--accent-color);
 
     font-family: Raleway;
     font-style: normal;
-    font-weight: bold;
+    font-weight: 700;
     font-size: 26px;
     line-height: 1.92;
 }
@@ -169,6 +186,13 @@ button {
     text-decoration: none;
 }
 
+.icon-nav {
+    display: block;
+    padding: 0;
+    margin-right: 10px;
+    fill: currentColor;
+}
+
 .auth-link .link:hover,
 .auth-link .link:focus {
     color: var(--accent-color);
@@ -178,7 +202,14 @@ button {
 
 .hero {
     width: 100%;
+    max-height: 600px;
     background-color: #2F303A;
+    background-image: linear-gradient(to top, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/background.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    
+
 }
 
 .hero-container {
@@ -231,6 +262,23 @@ button {
 
 .our-work-list .item + .item {
     margin-left: 30px;
+}
+
+.our-work-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 270px;
+    height: 120px;
+    margin-bottom: 30px;
+    background-color: #F5F4FA;
+    border-radius: 4px;
+}
+
+.work-icon {
+    width: 70px;
+    height: 70px;
+
 }
 
 
@@ -331,17 +379,104 @@ button {
     line-height: 1.18;
 }
 
+/* Иконки соц. сайтов */
+.icon-list {
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+}
+
+.icon-item {
+    display: flex;
+}
+
+.icon-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.icon-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--icons-color);
+}
+
+.icon-link .icon-social {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+}
+
+.icon-link:hover,
+.icon-link:focus {
+    background-color: var(--accent-color);
+    color: var(--title-color-white);
+}
+
+/* Постоянные клиенты */
+.container-client {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
+.client-list {
+    display: flex;
+    margin-top: 50px;
+}
+
+.client-item {
+    width: 170px;
+}
+
+.client-item:not(:last-child) {
+    margin-right: 30px;
+}
+
+.client-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 100%;
+    height: 90px;
+    border: 1px solid var(--icons-color);
+    box-sizing: border-box;
+    border-radius: 4px;
+    color: var(--icons-color);
+}
+
+.logo-icon {
+    fill: currentColor;
+}
+
+.client-link:hover,
+.client-link:focus {
+    border-color: var(--accent-color);
+    color: var(--accent-color);
+}
+
 /* Подвал */
 
 .footer {
     width: 100%;
     background-color: #2F303A;
-
 }
 
 .footer-container {
+    display: flex;
+    align-items: flex-start;
     padding-top: 60px;
     padding-bottom: 60px;
+}
+
+.footer-contact {
+    margin-right: 70px;
+}
+
+.footer-contact .logo {
+    margin-bottom: 20px;
 }
 
 .logo>.white {
@@ -367,6 +502,29 @@ button {
 .contact .contact-link {
     color: var(--address-color);
 
+}
+
+.get-us {
+    display: block;
+    margin-bottom: 16px;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 1.15;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+}
+
+.icon-footer .icon-link{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    color: var(--title-color-white);
 }
 
 /* ----------Страница - ПОРТФОЛИО -------------------------------------------------------*/
@@ -476,4 +634,42 @@ button {
     font-size: 16px;
     font-weight: 400;
     line-height: 1.87;
+}
+
+
+/* Иконки соц. сайтов */
+.icon-list {
+    display: flex;
+    justify-content: center ;
+    margin-top: 16px;
+}
+
+.icon-item {
+    display: flex;
+}
+
+.icon-item:not(:last-child) {
+    margin-right: 10px;
+}
+
+.icon-link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 44px;
+    height: 44px;
+    border-radius: 50%;
+    color: var(--icons-color);
+}
+
+.icon-link .icon-social {
+    width: 20px;
+    height: 20px;
+    fill: currentColor;
+}
+
+.icon-link:hover,
+.icon-link:focus {
+    background-color: var(--accent-color);
+    color: var(--title-color-white);
 }
