--- a/css/style.css
+++ b/css/style.css
@@ -574,12 +574,12 @@ button {
 .projects-list {
     display: flex;
     flex-wrap: wrap;
+    margin: -15px;
 }
 
 .projects-list>.item {
     width: 370px;
-    margin-right: 30px;
-    margin-bottom: 30px;
+    margin: 15px;
 }
 
 .projects-list .item:nth-child(3n) {
@@ -588,6 +588,12 @@ button {
 
 .projects-list .item:nth-last-child(-n+3) {
     margin-bottom: 0px;
+}
+
+.projects-list>.item:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+    0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .projects-list a {
